# prototype-858700600

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  containerapp.yaml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
proofreader/: annotate.py  compare.py  models.py  ocr.py  pdf.py  report.py  vision.py  worker.py
proofreader/templates/: base.html.j2  report.html.j2  terminal.html.j2
reference/: Allowable Changes Sample Label Generator _ TTB_ Alcohol and Tobacco Tax and Trade Bureau.html  Anatomy of a Distilled Spirits Label Tool _ TTB_ Alcohol and Tobacco Tax and Trade Bureau.html  Anatomy of a Malt Beverage Label _ TTB_ Alcohol and Tobacco Tax and Trade Bureau.html  Anatomy of a Wine Label _ TTB_ Alcohol and Tobacco Tax and Trade Bureau.html  Distilled Spirits Labeling _ TTB_ Alcohol and Tobacco Tax and Trade Bureau.html  Malt Beverage Labeling _ TTB_ Alcohol and Tobacco Tax and Trade Bureau.html  Take-Home Project_ AI-Powered Alcohol Label Verification App.txt  Wine Labeling _ TTB_ Alcohol and Tobacco Tax and Trade Bureau.html  eCFR __ 27 CFR Part 13 -- Labeling Proceedings.html  eCFR __ 27 CFR Part 16 -- Alcoholic Beverage Health Warning Statement.html  eCFR __ 27 CFR Part 4 -- Labeling and Advertising of Wine.html  eCFR __ 27 CFR Part 5 -- Labeling and Advertising of Distilled Spirits.html  eCFR __ 27 CFR Part 7 -- Labeling and Advertising of Malt Beverages.html
reference/Allowable Changes Sample Label Generator _ TTB_ Alcohol and Tobacco Tax and Trade Bureau_files/: css_4C_sXc4BxgvyN0Yqhl2BD-3V_SPycLd1U45WJA4GGPs.css  js_BPqPPTnBEaGlz2RjpWNpkwa73NUmDyLhditBp9MCmN0.js
reference/Anatomy of a Distilled Spirits Label Tool _ TTB_ Alcohol and Tobacco Tax and Trade Bureau_files/: js_KzXHdseaPv1bkWCId1HToOD4v1SrpwnsfOpK2uSmSxY.js
reference/Anatomy of a Malt Beverage Label _ TTB_ Alcohol and Tobacco Tax and Trade Bureau_files/: b4016969.js
reference/Anatomy of a Wine Label _ TTB_ Alcohol and Tobacco Tax and Trade Bureau_files/: css_GE2RB1fKe5x0KWtfnY6NHDIuhsCyedjDQDLxOxGPo3s.css  css_YJdTLcLciOfPl8lN9yk3YrcRZl8H_Q4Vc-ZKcZCO5-o.css  js_HKv9B1qvj-mF59j95WAQd0W-O9CGtoFYJTivYHNKnjA.js
static/: index.html
tests/: fake_readers.py  make_synthetic_label.py  make_test_pdf.py  test_annotate.py  test_api.py  test_compare.py  test_pdf_extraction.py  test_pipeline.py  test_report.py  test_vision.py
tests/sample_labels/: descriptions.md
